--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-01-23 09:55+0000\n"
+"POT-Creation-Date: 2024-01-25 14:54+0000\n"
 "PO-Revision-Date: 2024-01-23 09:55+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -19,6 +19,34 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.14.0\n"
 
+#: grc/start_application/forms.py:11
+msgid "Enter your email address"
+msgstr "Rhowch eich cyfeiriad e-bost"
+
+#: grc/start_application/forms.py:12
+msgid "Enter a valid email address"
+msgstr "Rhowch eich cyfeiriad e-bost (valid error message)"
+
+#: grc/start_application/forms.py:26
+msgid "No"
+msgstr "Nac ydw"
+
+#: grc/start_application/forms.py:27
+msgid "Yes, and I have my reference number"
+msgstr "Oes, ac mae gennyf fy nghyfeirnod"
+
+#: grc/start_application/forms.py:28
+msgid "Yes, but I have lost my reference number"
+msgstr "Ydw, ond rydw i wedi colli fy nghyfeirnod"
+
+#: grc/start_application/forms.py:30
+msgid "Select if you have already started an application"
+msgstr "Os ydych wedi ei golli neu ei anghofio, gallwch ddechrau cais newydd."
+
+#: grc/start_application/forms.py:34
+msgid "Enter a reference number"
+msgstr "Rhowch gyfeirnod"
+
 #: grc/templates/start-application/email-address.html:14
 msgid "Email address"
 msgstr "Cyfeiriad ebost"
@@ -28,24 +56,24 @@ msgid ""
 "You need to provide an email address to apply for a Gender Recognition "
 "Certificate using this service."
 msgstr ""
-"Mae angen i chi ddarparu cyfeiriad e-bost i wneud cais am Gydnabod Rhywedd "
-"Tystysgrif yn defnyddio'r gwasanaeth hwn."
+"Mae angen i chi ddarparu cyfeiriad e-bost i wneud cais am Gydnabod "
+"Rhywedd Tystysgrif yn defnyddio'r gwasanaeth hwn."
 
 #: grc/templates/start-application/email-address.html:19
 msgid ""
 "This is so we can save your progress and you can return to your "
 "application later."
 msgstr ""
-"Mae hyn er mwyn i ni allu arbed eich cynnydd a gallwch ddychwelyd at eich "
-"cais yn ddiweddarach."
+"Mae hyn er mwyn i ni allu arbed eich cynnydd a gallwch ddychwelyd at eich"
+" cais yn ddiweddarach."
 
 #: grc/templates/start-application/email-address.html:22
 msgid ""
 "If this is your first time using this service, we will give you a "
 "reference number."
 msgstr ""
-"Os mai dyma'r tro cyntaf i chi ddefnyddio'r gwasanaeth hwn, byddwn yn rhoi a "
-"rhif Cyfeirnod."
+"Os mai dyma'r tro cyntaf i chi ddefnyddio'r gwasanaeth hwn, byddwn yn "
+"rhoi a rhif Cyfeirnod."
 
 #: grc/templates/start-application/email-address.html:23
 msgid "You will need this if you return to your application."
@@ -56,9 +84,8 @@ msgid ""
 "If you are returning to your application, you will need your application "
 "reference number."
 msgstr ""
-"Os ydych yn dychwelyd at eich cais, bydd angen eich cais arnoch "
-"rhif Cyfeirnod."
-
+"Os ydych yn dychwelyd at eich cais, bydd angen eich cais arnoch rhif "
+"Cyfeirnod."
 
 #: grc/templates/start-application/email-address.html:27
 msgid "If you have lost or forgotten it, you can start a new application."
@@ -83,4 +110,13 @@ msgstr ""
 #: grc/utils/form_custom_validators.py:415
 msgid "File does not have an approved extension."
 msgstr ""
+
+#~ msgid "Enter a valid email address"
+#~ msgstr "Rhowch eich cyfeiriad e-bost (valid)"
+
+#~ msgid "This field is required."
+#~ msgstr ""
+
+#~ msgid "Invalid email address."
+#~ msgstr "Cyfeiriad ebost"
 
