--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-03-11 10:58+0000\n"
+"POT-Creation-Date: 2024-03-11 11:20+0000\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -117,8 +117,9 @@ msgid "For example, that means you should be able to:"
 msgstr "Er enghraifft, golyga hyn y dylech allu:"
 
 #: grc/templates/policies/accessibility-statement.html:41
-msgid "zoom in up to 300% without problems"
-msgstr "Chwyddo’r dudalen hyd at 300% heb broblemau"
+#, python-format
+msgid "zoom in up to 300%% without problems"
+msgstr "Chwyddo’r dudalen hyd at 300%% heb broblemau"
 
 #: grc/templates/policies/accessibility-statement.html:42
 msgid "navigate most of the website using just a keyboard"
@@ -225,8 +226,8 @@ msgid ""
 "meeting accessibility requirements, contact"
 msgstr ""
 "Os byddwch yn dod ar draws unrhyw broblem sydd heb ei chynnwys ar y "
-"dudalen hon, neu’n credu nad ydym yn bodloni’r gofynion o ran hygyrchedd, "
-"cysylltwch â"
+"dudalen hon, neu’n credu nad ydym yn bodloni’r gofynion o ran hygyrchedd,"
+" cysylltwch â"
 
 #: grc/templates/policies/accessibility-statement.html:95
 msgid "Enforcement procedure"
@@ -239,13 +240,14 @@ msgid ""
 "(No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’)"
 msgstr ""
 "Y Comisiwn Cydraddoldeb a Hawliau Dynol (EHRC) sy’n gyfrifol am orfodi "
-"Rheoliadau Hygyrchedd Cyrff y Sector Cyhoeddus (Gwefannau a Rhaglenni Symudol) "
-"(Rhif 2) 2018 (y ‘rheoliadau hygyrchedd’)"
+"Rheoliadau Hygyrchedd Cyrff y Sector Cyhoeddus (Gwefannau a Rhaglenni "
+"Symudol) (Rhif 2) 2018 (y ‘rheoliadau hygyrchedd’)"
 
 #: grc/templates/policies/accessibility-statement.html:99
 msgid "If you’re not happy with how we respond to your complaint, contact the"
 msgstr ""
-"Os nad ydych chi’n fodlon gyda’r ffordd rydym yn ymateb i’ch cwyn, cysylltwch â’r"
+"Os nad ydych chi’n fodlon gyda’r ffordd rydym yn ymateb i’ch cwyn, "
+"cysylltwch â’r"
 
 #: grc/templates/policies/accessibility-statement.html:99
 msgid "Equality Advisory and Support Service (EASS) (opens in a new tab)"
@@ -271,11 +273,15 @@ msgstr "Mae’r wefan hon yn cydymffurfio’n rhannol â"
 
 #: grc/templates/policies/accessibility-statement.html:109
 msgid "Web Content Accessibility Guidelines version 2.1 (opens in a new tab)"
-msgstr " AA Canllawiau Hygyrchedd Cynnwys Gwe fersiwn 2.1 (yn agor mewn tab newydd)"
+msgstr ""
+" AA Canllawiau Hygyrchedd Cynnwys Gwe fersiwn 2.1 (yn agor mewn tab "
+"newydd)"
 
 #: grc/templates/policies/accessibility-statement.html:109
 msgid "AA standard, due to ‘the non-compliances’, listed below"
-msgstr ", a hynny oherwydd yr enghreifftiau o beidio â chydymffurfio a restrir isod"
+msgstr ""
+", a hynny oherwydd yr enghreifftiau o beidio â chydymffurfio a restrir "
+"isod"
 
 #: grc/templates/policies/accessibility-statement.html:113
 msgid "Non-accessible content"
@@ -291,8 +297,9 @@ msgid ""
 "descriptions – this makes it difficult for people with screen readers to "
 "use them"
 msgstr ""
-"Nid yw PDFs datganiad statudol wedi’u marcio â thagiau na disgrifiadau testun "
-"– mae hyn yn ei gwneud hi’n anodd i bobl sydd â darllenwyr sgrin i’w defnyddio"
+"Nid yw PDFs datganiad statudol wedi’u marcio â thagiau na disgrifiadau "
+"testun – mae hyn yn ei gwneud hi’n anodd i bobl sydd â darllenwyr sgrin "
+"i’w defnyddio"
 
 #: grc/templates/policies/accessibility-statement.html:125
 msgid "Non-compliance with the accessibility regulations"
@@ -302,11 +309,15 @@ msgstr "Diffyg cydymffurfio â’r rheoliadau hygyrchedd"
 msgid ""
 "Statutory declaration PDFs have not been marked up with tags or text "
 "descriptions"
-msgstr "Nid yw PDFs datganiad statudol wedi’u marcio â thagiau neu ddisgrifiadau testun"
+msgstr ""
+"Nid yw PDFs datganiad statudol wedi’u marcio â thagiau neu ddisgrifiadau "
+"testun"
 
 #: grc/templates/policies/accessibility-statement.html:129
 msgid "This makes it difficult for people with screen readers to use them"
-msgstr "Mae hyn yn ei gwneud hi’n anodd i bobl sydd â darllenwyr sgrin i’w defnyddio"
+msgstr ""
+"Mae hyn yn ei gwneud hi’n anodd i bobl sydd â darllenwyr sgrin i’w "
+"defnyddio"
 
 #: grc/templates/policies/accessibility-statement.html:132
 msgid "We are aware of these issues and are working to fix them"
@@ -322,14 +333,17 @@ msgid ""
 "disproportionate burden on the Government Equalities Office to resolve "
 "the non-compliance"
 msgstr ""
-"Nid ydym eto wedi cydnabod rhan o’r gwasanaeth lle byddai’n faich anghymesur "
-"ar Swyddfa Cydraddoldeb y Llywodraeth i ddatrys yr achosion o ddiffyg cydymffurfio"
+"Nid ydym eto wedi cydnabod rhan o’r gwasanaeth lle byddai’n faich "
+"anghymesur ar Swyddfa Cydraddoldeb y Llywodraeth i ddatrys yr achosion o "
+"ddiffyg cydymffurfio"
 
 #: grc/templates/policies/accessibility-statement.html:140
 msgid ""
 "If this becomes the case, we will publish full details here explaining "
 "our decision"
-msgstr "Os daw hyn yn wir, byddwn yn cyhoeddi manylion llawn yma yn egluro ein penderfyniad"
+msgstr ""
+"Os daw hyn yn wir, byddwn yn cyhoeddi manylion llawn yma yn egluro ein "
+"penderfyniad"
 
 #: grc/templates/policies/accessibility-statement.html:144
 msgid "How we tested"
@@ -340,8 +354,8 @@ msgid ""
 "Testing has been conducted internally by Government Equalities Office "
 "staff and externally audited by the"
 msgstr ""
-"Cynhaliwyd profion yn fewnol gan staff Swyddfa Cydraddoldeb y Llywodraeth "
-"a’u harchwilio’n allanol gan y"
+"Cynhaliwyd profion yn fewnol gan staff Swyddfa Cydraddoldeb y Llywodraeth"
+" a’u harchwilio’n allanol gan y"
 
 #: grc/templates/policies/accessibility-statement.html:147
 msgid "Digital Accessibility Centre (opens in a new tab)"
@@ -352,7 +366,9 @@ msgstr "Ganolfan Hygyrchedd Digidol (yn agor mewn tab newydd)"
 msgid ""
 "Where they have been checked for compliance, it has been against WCAG 2.1"
 " AA"
-msgstr "Lle cawsant eu gwirio am gydymffurfiaeth, mae wedi bod yn erbyn WCAG 2.1 AA"
+msgstr ""
+"Lle cawsant eu gwirio am gydymffurfiaeth, mae wedi bod yn erbyn WCAG 2.1 "
+"AA"
 
 #: grc/templates/policies/accessibility-statement.html:152
 msgid "What we are doing to improve accessibility"
@@ -360,7 +376,9 @@ msgstr "Beth rydym yn ei wneud i wella hygyrchedd"
 
 #: grc/templates/policies/accessibility-statement.html:155
 msgid "We are working to fix any parts of the service which are not accessible"
-msgstr "Rydym yn gweithio i fynd i’r afael ag unrhyw rannau o'r gwasanaeth nad ydynt yn hygyrch"
+msgstr ""
+"Rydym yn gweithio i fynd i’r afael ag unrhyw rannau o'r gwasanaeth nad "
+"ydynt yn hygyrch"
 
 #: grc/templates/policies/accessibility-statement.html:159
 msgid "Preparation of this accessibility statement"
@@ -370,7 +388,9 @@ msgstr "Paratoi’r datganiad hygyrchedd hwn"
 msgid ""
 "This statement was prepared on 7th June 2022. It was last reviewed on 7th"
 " June 2022"
-msgstr "Paratowyd y datganiad hwn ar 7 Mehefin 2022. Adolygwyd ddiwethaf ar 7 Mehefin 2022"
+msgstr ""
+"Paratowyd y datganiad hwn ar 7 Mehefin 2022. Adolygwyd ddiwethaf ar 7 "
+"Mehefin 2022"
 
 #: grc/templates/policies/accessibility-statement.html:165
 msgid "This website was last tested on 26th May 2022"
@@ -821,3 +841,4 @@ msgstr ""
 #: grc/templates/policies/privacy-policy.html:195
 msgid "You can contact the Information Commissioner at:"
 msgstr "Gallwch gysylltu â’r Comisiynydd Gwybodaeth yn:"
+
