--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-03-11 11:20+0000\n"
+"POT-Creation-Date: 2024-03-11 13:45+0000\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -400,6 +400,207 @@ msgstr "Profwyd y wefan hon ddiwethaf ar 26 Mai 2022"
 msgid "The test was carried out by the Digital Accessibility Centre"
 msgstr "Cynhaliwyd y prawf gan y Ganolfan Hygyrchedd Digidol"
 
+#: grc/templates/policies/cookies.html:3 grc/templates/policies/cookies.html:20
+msgid "Cookies"
+msgstr "Cwyis"
+
+#: grc/templates/policies/cookies.html:21
+msgid "GOV.UK Gender Recognition Certificate"
+msgstr "Mae Tystysgrif Cydnabod Rhywedd GOV.UK"
+
+#: grc/templates/policies/cookies.html:21
+msgid "puts small files (known as ‘cookies’) on your computer"
+msgstr "yn gosod ffeiliau bychain (a elwir yn cwcis) ar eich cyfrifiadur"
+
+#: grc/templates/policies/cookies.html:22
+msgid ""
+"These cookies are used across the GOV.UK Gender Recognition Certificate "
+"website"
+msgstr ""
+
+#: grc/templates/policies/cookies.html:24
+msgid ""
+"We only set cookies when JavaScript is running in your browser and you’ve"
+" accepted them"
+msgstr ""
+"Rydym ond yn gosod cwcis pan fydd JavaScript yn weithredol yn eich porwr "
+"ac rydych wedi eu derbyn"
+
+#: grc/templates/policies/cookies.html:25
+msgid ""
+"If you choose not to run Javascript, the information on this page will "
+"not apply to you"
+msgstr ""
+"Os dewiswch beidio â gweithredu Javascript, ni fydd yr wybodaeth ar y "
+"dudalen hon yn berthnasol i chi"
+
+#: grc/templates/policies/cookies.html:28
+msgid ""
+"If you use an older browser, such as Internet Explorer 8 or earlier, the "
+"cookies we use will not affect you"
+msgstr ""
+
+#: grc/templates/policies/cookies.html:30
+msgid "Find out"
+msgstr "Cewch ragor o"
+
+#: grc/templates/policies/cookies.html:30
+msgid "how to manage cookies"
+msgstr "wybodaeth am sut i reoli cwcis"
+
+#: grc/templates/policies/cookies.html:30
+msgid "from the Information Commissioner's Office"
+msgstr "gan Swyddfa'r Comisiynydd Gwybodaeth"
+
+#: grc/templates/policies/cookies.html:33
+msgid "Essential cookies (strictly necessary)"
+msgstr "Cwcis hanfodol (cwbl angenrheidiol)"
+
+#: grc/templates/policies/cookies.html:34
+msgid ""
+"We use an essential cookie to remember when you accept or reject cookies "
+"on our website"
+msgstr ""
+"Rydym yn defnyddio cwci hanfodol i gofio pan fyddwch yn derbyn neu'n "
+"gwrthod cwcis ar ein gwefan"
+
+#: grc/templates/policies/cookies.html:37
+msgid "Essential cookies we use"
+msgstr "Cwcis hanfodol yr ydym yn eu defnyddio"
+
+#: grc/templates/policies/cookies.html:40
+#: grc/templates/policies/cookies.html:81
+msgid "Name"
+msgstr "Enw"
+
+#: grc/templates/policies/cookies.html:41
+#: grc/templates/policies/cookies.html:82
+#: grc/templates/policies/privacy-policy.html:45
+msgid "Purpose"
+msgstr "Pwrpas"
+
+#: grc/templates/policies/cookies.html:42
+#: grc/templates/policies/cookies.html:83
+msgid "Expires"
+msgstr "Dyddiad dod i ben"
+
+#: grc/templates/policies/cookies.html:49
+msgid "Saves your progress on the website"
+msgstr "Cadw eich cynnydd ar y wefan"
+
+#: grc/templates/policies/cookies.html:50
+msgid "When you close your browser tab"
+msgstr "Pan fyddwch yn cau’r tab yn eich porwr"
+
+#: grc/templates/policies/cookies.html:54
+msgid "Saves your cookie consent settings"
+msgstr "Cadw eich gosodiadau caniatáu cwcis"
+
+#: grc/templates/policies/cookies.html:55
+msgid "1 year"
+msgstr ""
+
+#: grc/templates/policies/cookies.html:60
+msgid "Analytics cookies (optional)"
+msgstr ""
+
+#: grc/templates/policies/cookies.html:62
+msgid ""
+"We use Google Analytics software to understand how people use the GOV.UK "
+"Gender Recognition Certificate"
+msgstr ""
+"Rydym yn defnyddio meddalwedd Google Analytics i ddeall sut mae pobl yn "
+"defnyddio Tystysgrif Cydnabod Rhywedd GOV.UK"
+
+#: grc/templates/policies/cookies.html:63
+msgid ""
+"We do this to help make sure the site is meeting the needs of its users "
+"and to help us make improvements"
+msgstr ""
+
+#: grc/templates/policies/cookies.html:65
+msgid ""
+"We do not collect or store your personal information (for example your "
+"name or address) so this information cannot be used to identify who you "
+"are"
+msgstr ""
+"Nid ydym yn casglu nac yn cadw’ch gwybodaeth bersonol (er enghraifft, "
+"eich enw neu’ch cyfeiriad) felly ni ellir defnyddio’r wybodaeth hon i’ch "
+"adnabod"
+
+#: grc/templates/policies/cookies.html:66
+msgid "We do not allow Google to use or share our analytics data"
+msgstr "Nid ydym yn caniatáu i Google ddefnyddio neu rannu ein data dadansoddol"
+
+#: grc/templates/policies/cookies.html:67
+msgid "Google Analytics stores information about:"
+msgstr ""
+
+#: grc/templates/policies/cookies.html:70
+msgid "the pages you visit"
+msgstr ""
+
+#: grc/templates/policies/cookies.html:71
+msgid "how long you spend on each page"
+msgstr ""
+
+#: grc/templates/policies/cookies.html:72
+msgid "how you arrived at the site"
+msgstr ""
+
+#: grc/templates/policies/cookies.html:73
+msgid "what you click on while you visit the site"
+msgstr ""
+
+#: grc/templates/policies/cookies.html:74
+msgid "the device and browser you use"
+msgstr ""
+
+#: grc/templates/policies/cookies.html:78
+msgid "Analytics cookies we use"
+msgstr "Cwcis dadansoddol yr ydym yn eu defnyddio"
+
+#: grc/templates/policies/cookies.html:89
+#: grc/templates/policies/cookies.html:94
+msgid ""
+"Helps us count how many people visit the GOV.UK Gender Recognition "
+"Certificate by telling us if you’ve visited before"
+msgstr ""
+"Mae yn ein helpu i gyfrif faint o bobl sy’n ymweld â Thystysgrif Cydnabod"
+" Rhywedd GOV.UK drwy wrthym os ydych wedi ymweld o'r blaen"
+
+#: grc/templates/policies/cookies.html:90
+msgid "2 years"
+msgstr "2 flynedd"
+
+#: grc/templates/policies/cookies.html:95
+msgid "24 hours"
+msgstr "24 awr"
+
+#: grc/templates/policies/cookies.html:99
+msgid "Used to reduce the number of requests"
+msgstr "Defnyddir hwn i leihau nifer y ceisiadau"
+
+#: grc/templates/policies/cookies.html:100
+msgid "1 minute"
+msgstr "1 munud"
+
+#: grc/templates/policies/cookies.html:108
+msgid "Do you want to accept analytics cookies?"
+msgstr "A ydych eisiau derbyn cwcis dadansoddol?"
+
+#: grc/templates/policies/cookies.html:114
+msgid "Yes"
+msgstr ""
+
+#: grc/templates/policies/cookies.html:120
+msgid "No"
+msgstr ""
+
+#: grc/templates/policies/cookies.html:128
+msgid "Save cookie settings"
+msgstr ""
+
 #: grc/templates/policies/privacy-policy.html:3
 msgid "Privacy Policy"
 msgstr "Polisi Preifatrwydd"
@@ -493,10 +694,6 @@ msgstr "llythyrau treth"
 #: grc/templates/policies/privacy-policy.html:41
 msgid "academic statements"
 msgstr "datganiadau academaidd"
-
-#: grc/templates/policies/privacy-policy.html:45
-msgid "Purpose"
-msgstr ""
 
 #: grc/templates/policies/privacy-policy.html:48
 msgid ""
