--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -39,7 +39,9 @@ msgstr ""
 
 #: grc/templates/document-checker/doc-checker-base.html:80
 msgid "Check documents needed to apply for a Gender Recognition Certificate"
-msgstr "Gwirio dogfennau sydd eu hangen i wneud cais am Dystysgrif Cydnabod Rhywedd"
+msgstr ""
+"Gwirio dogfennau sydd eu hangen i wneud cais am Dystysgrif Cydnabod "
+"Rhywedd"
 
 #: grc/templates/document-checker/start.html:3
 #: grc/templates/document-checker/start.html:10
@@ -51,16 +53,16 @@ msgid ""
 "Use this tool to check which documents you need for your Gender "
 "Recognition Certificate application"
 msgstr ""
-"Defnyddiwch yr adnodd hwn i wirio pa ddogfennau sydd eu hangen arnoch "
-"ar gyfer eich cais am Dystysgrif Cydnabod Rhywedd"
+"Defnyddiwch yr adnodd hwn i wirio pa ddogfennau sydd eu hangen arnoch ar "
+"gyfer eich cais am Dystysgrif Cydnabod Rhywedd"
 
 #: grc/templates/document-checker/start.html:17
 msgid ""
 "Answering the questions means we can give you a list of documents based "
 "on your personal circumstances"
 msgstr ""
-"Mae ateb y cwestiynau yn golygu y gallwn roi rhestr o ddogfennau i chi yn "
-"seiliedig ar eich amgylchiadau personol"
+"Mae ateb y cwestiynau yn golygu y gallwn roi rhestr o ddogfennau i chi yn"
+" seiliedig ar eich amgylchiadau personol"
 
 #: grc/templates/document-checker/start.html:18
 msgid "You can have the list of documents sent to you by email at the end"
@@ -71,8 +73,9 @@ msgid ""
 "This is not part of the application process and is designed only to help "
 "you prepare the documents you need before you start your application"
 msgstr ""
-"Nid yw hyn yn rhan o'r broses gwneud cais ac fe'i cynlluniwyd i'ch helpu i "
-"baratoi'r dogfennau sydd eu hangen arnoch cyn i chi ddechrau gwneud eich cais"
+"Nid yw hyn yn rhan o'r broses gwneud cais ac fe'i cynlluniwyd i'ch helpu "
+"i baratoi'r dogfennau sydd eu hangen arnoch cyn i chi ddechrau gwneud "
+"eich cais"
 
 #: grc/templates/document-checker/start.html:24
 msgid "We do not store any of the information you enter in this tool"
