--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-03-12 12:45+0000\n"
+"POT-Creation-Date: 2024-03-12 14:54+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,6 +43,12 @@ msgstr ""
 
 #: grc/business_logic/constants.py:12
 msgid "Select if you are currently married or in a civil partnership"
+msgstr ""
+
+#: grc/business_logic/constants.py:13
+msgid ""
+"Select if you ever been married or in a civil partnership where your "
+"spouse or partner died"
 msgstr ""
 
 #: grc/lazy/lazy_form_custom_validators.py:39
@@ -80,6 +86,13 @@ msgstr ""
 
 #: grc/templates/document-checker/doc-checker-base.html:80
 msgid "Check documents needed to apply for a Gender Recognition Certificate"
+msgstr ""
+
+#: grc/templates/document-checker/partner-died.html:7
+#: grc/templates/document-checker/partner-died.html:25
+msgid ""
+"Have you ever been in a marriage or civil partnership where your spouse "
+"or partner died?"
 msgstr ""
 
 #: grc/templates/document-checker/previous-names-check.html:7
